--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			crossorigin
 		/>
 		<link
-			href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,300;1,400&family=Source+Sans+Pro:wght@300;400;600;700;900&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400&family=Source+Sans+Pro:wght@300;400;600;700;900&display=swap"
 			rel="stylesheet"
 		/>
 	</head>
