feat: docker config and nfs

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<link
 			rel="icon"
-			href="./src/assets/Ping-Logo.png"
+			href="https://safefood-nfs.hopto.org/assets/Ping-Logo.png"
 		/>
 		<meta
 			name="viewport"
